--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -5,6 +5,6 @@
 
 	</main>
 	<aside class="aside_button">
-<button class="btn btn-primary btn-lg">Réserver un table</button>
+<a class="btn btn-primary btn-lg" href="{{ path('app_reservation') }}">Réserver un table</a>
 </aside>
 {% endblock %}
