--- a/public/assets/css/indexStyle.css
+++ b/public/assets/css/indexStyle.css
@@ -1,5 +1,5 @@
-*{
-margin: 0;
+* {
+  margin: 0;
 }
 
 main {
@@ -7,23 +7,34 @@ main {
   background-color: black;
 }
 
-body{
-  
+body {
 }
 
-.btn-primary{
-
+.btn-primary {
 }
 
-.reserve-button, .aside_button {
+.reserve-button,
+.aside_button {
   margin: 10px;
   display: flex;
   justify-content: center;
   position: relative;
 }
 
-.day,
-.timetables,
+td {
+  width: auto;
+}
+
+.timetablesLunch,
+.timetablesDiner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2%;
+  width: 33%;
+}
+
 .timetables_list {
   display: flex;
   justify-content: space-between;
@@ -33,25 +44,34 @@ h5 {
   display: flex;
   justify-content: center;
 }
+
 .main_timetables {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
+
 .timetables_container {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background-color: white;
+  background-color: rgb(255, 254, 235);
   border: 1px solid;
   border-radius: 10px;
-  margin-bottom: 3%;
+  margin-bottom: 2%;
   color: black;
 }
+
 .timetables_title {
   color: brown;
   margin-top: 3%;
+}
+
+hr{
+  border: 1.5px solid;
+  width: 100%;
+  align-self: center;
 }
 
 .timetables_lists_container {
@@ -62,32 +82,35 @@ h5 {
 }
 
 .timetables_list {
-  margin-bottom: 3%;
+  display: flex;
+  margin-bottom: 1%;
 }
-.day{
-color: brown;
-font-weight: 600;
+
+.day {
+  display: flex;
+  width: 33%;
+  color: brown;
+  font-weight: 500;
 }
+
 .newsletter_container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+body::-webkit-scrollbar {
+  width: 0em;
+}
 
-  body::-webkit-scrollbar {
-    width: 0em;
-  }
-  
-  body::-webkit-scrollbar-track {
-    background-color: #f5f5f5;
-  }
-  
-  body::-webkit-scrollbar-thumb {
-    background-color: #000000;
-  }
+body::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #000000;
+}
 /*No scrollbar*/
-
 
 footer {
   display: flex;
@@ -108,10 +131,10 @@ footer {
   justify-content: center;
 }
 
-.navbar-brand{
+.navbar-brand {
   width: 10em;
 }
 
-.card-title{
+.card-title {
   background-color: var(--bs-card-cap-bg);
 }
