--- a/public/assets/css/indexStyle.css
+++ b/public/assets/css/indexStyle.css
@@ -1,16 +1,52 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap');
+
 * {
   margin: 0;
 }
 
 main {
-  height: 700px;
-  background-color: black;
+  height: 600px;
 }
 
 body {
 }
 
-.btn-primary {
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: 'Cardo', serif;
+}
+
+.logo_QA{
+
+}
+
+.main_container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  background-color: black;
+  background-image: url("../img/snack.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.restaurantCardSection {
+  display: flex;
+  color: #f5f5f5;
+  background-color: #000000;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+  background-image: url("../img/Bgardoise.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .reserve-button,
@@ -56,8 +92,8 @@ h5 {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background-color: rgb(255, 254, 235);
-  border: 1px solid;
+  background-color: rgb(255, 255, 255);
+  border: 1px dashed;
   border-radius: 10px;
   margin-bottom: 2%;
   color: black;
@@ -68,8 +104,8 @@ h5 {
   margin-top: 3%;
 }
 
-hr{
-  border: 1.5px solid;
+hr {
+  border: 1.5px dashed;
   width: 100%;
   align-self: center;
 }
@@ -132,9 +168,202 @@ footer {
 }
 
 .navbar-brand {
+  display: flex;
   width: 10em;
 }
 
 .card-title {
   background-color: var(--bs-card-cap-bg);
+}
+
+.subtitleMainCard,
+.MainCardTitle {
+  display: flex;
+  justify-content: center;
+}
+
+.subtitleMainCard {
+  display: flex;
+  justify-content: center;
+  padding: 2%;
+  font-size: 4rem;
+}
+
+.headline {
+  display: flex;
+  padding-bottom: 30px;
+  font-size: 3.5rem;
+}
+
+#titleMenu {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: rgba(255, 255, 255, 0.6);
+  width: 50%;
+  height: 300px;
+  padding-left: 40px;
+  padding-top: 30px;
+  border-radius: 4px;
+}
+/*MENUS - CARTE*/
+
+.list-group-item {
+  background: transparent !important;
+  color: white;
+}
+.list-group {
+  background: transparent !important;
+  color: white;
+}
+.starterCaps {
+  display: flex;
+  width: 50%;
+}
+
+.starterCard {
+  border: 2px dashed rgba(255, 255, 255, 0.7);
+  /*border-image: url("../img/Crayon.svg") 20 / 20px 100px / 1 round;*/
+  border-radius: 8px;
+}
+
+.StarterTitle {
+  display: flex;
+  justify-content: center;
+}
+
+.mainMenu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 10px;
+}
+
+.dishCaps,
+.starterCaps {
+  padding: 10px;
+}
+
+.list-group-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  padding-bottom: 0;
+}
+
+.name,
+.arrow,
+.price,
+.desc .TTC {
+  display: flex;
+  padding: 5px;
+  padding-bottom: 0;
+}
+
+.desc {
+  font-size: 0.7rem;
+  font-style: italic;
+  padding-left: 35px !important;
+}
+
+.span {
+  display: flex;
+  justify-content: right;
+}
+
+.img {
+  width: 30px;
+  height: 30px;
+}
+
+.starterList {
+  margin-top: 1.5rem;
+  padding: 10px !important;
+}
+
+.card-header {
+  padding: 0 !important;
+}
+
+.comboNameDesc {
+  display: flex;
+}
+
+.TTC {
+  margin-left: 3px;
+  font-size: 0.5rem;
+}
+
+.menuList{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.Title,
+.menuTitle,
+.nameMenu,
+.descMenu,
+.priceMenu{
+  display: flex;
+  justify-content: center;
+  padding-bottom: 5px;
+}
+
+.Title{
+  font-size: 2rem;
+}
+
+.menuTitle{
+  font-size: 2rem;
+}
+
+.nameMenu{
+  font-size: 1.5rem;
+}
+
+.descMenu{
+  font-size: 1.2rem;
+}
+
+.menuName{
+  font-size: 1rem;
+}
+
+.priceMenu{
+  font-size: 1.5rem;
+}
+
+.list-group-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  padding-bottom: 0;
+}
+
+/*VERSION MOBILE*/
+@media only screen and (max-width: 850px) {
+  .starterCaps {
+    display: flex;
+    width: 100%;
+  }
+
+  #titleMenu {
+    display: flex;
+    background-color: rgba(255, 255, 255, 0.6);
+    width: 100%;
+    height: 50%;
+    padding-left: 30px;
+    padding-top: 40px;
+    padding-bottom: 60px;
+    padding-right: 30px;
+    border-radius: 4px;
+  }
+
+  .headline {
+    display: flex;
+    padding-bottom: 30px;
+  }
 }
