--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -2,9 +2,17 @@
 
 {% block content %}
 	<main class="main_container container-fluid">
-
+		<div class="container-fluid">
+			<div id="titleMenu" class="col col-lg-6 col-sm-12 col-md-7 flexCol">
+				<div>
+					<div>
+						<h1 class="headline" style="text-align: left;">Bienvenue au Quai Antique !</h1>
+					</div>
+					<a class="btn btn-primary" href="{{ path('app_reservation') }}" title="" role="button">
+						<span>Réservez une table</span>
+					</a>
+				</div>
+			</div>
+		</div>
 	</main>
-	<aside class="aside_button">
-<a class="btn btn-primary btn-lg" href="{{ path('app_reservation') }}">Réserver un table</a>
-</aside>
 {% endblock %}
