--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,10 +6,9 @@
 			{% block title %}Bienvenue au Quai Antique
 			{% endblock %}
 		</title>
-		<link
-		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-		<link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet" />
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl7/1LS4+pFOmJunior49/7rdIeszYCD2v2x9x/iT4y" crossorigin="anonymous">
+		<link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet"/>
 		<link href="{{ asset('assets/css/indexStyle.css') }}" rel="stylesheet"/>
 	</head>
 	<body>
@@ -17,71 +16,64 @@
 			<nav class="navbar navbar-expand-lg bg-body-tertiary">
 				<div class="container-fluid">
 					<img class="navbar-brand logo_QA" src="{{ asset('assets/img/Logo_QA.png') }}"></img>
-					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
 					</button>
-					<div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-						<ul class="navbar-nav">
-							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="{{ path('app_accueil') }}">Accueil</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="{{path('app_menus')}}">Nos menus</a>
-							</li>
+				<div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="{{ path('app_accueil') }}">Accueil</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Notre carte</a>
+						<a class="nav-link" href="{{path('app_menus')}}">Nos menus</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="{{path('app_reservation')}}">Réserver une table</a>
+						<a class="nav-link" href="{{path('app_restaurant_menu')}}">Notre carte</a>
+						</li>
+						<li class="nav-item">
+						<a class="nav-link" href="{{path('app_reservation')}}">Réserver une table</a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-								Membres
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Membres
 							</a>
-							<ul class="dropdown-menu">
-
-								{% if app.User %}
-									<li>
-										<a class="dropdown-item" href="{{ path('app_account') }}">Mon compte</a>
-									</li>
-									<li>
-										<a class="dropdown-item" href="">Points de fidélités</a>
-									</li>
+						<ul class="dropdown-menu">
+							{% if app.User %}
+								<li>
+									<a class="dropdown-item" href="{{ path('app_account') }}">Mon compte</a>
+								</li>
+								<li>
+									<a class="dropdown-item" href="">Points de fidélités</a>
+								</li>
 								{% if is_granted('ROLE_ADMIN') %}
 									<li>
 										<a class="dropdown-item" href="{{ path('app_admin') }}">Administration</a>
 									</li>
-									{% endif %}
-									<li>
-										<a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a>
-									</li>
-								{% else %}
-									<li>
-										<a class="dropdown-item" href="{{ path('app_register') }}">Inscription</a>
-									</li>
-									<li>
-										<a class="dropdown-item" href="{{ path('app_login') }}">Connexion</a>
-									</li>
 								{% endif %}
+								<li>
+									<a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a>
+								</li>
+							{% else %}
+								<li>
+									<a class="dropdown-item" href="{{ path('app_register') }}">Inscription</a>
+								</li>
+								<li>
+									<a class="dropdown-item" href="{{ path('app_login') }}">Connexion</a>
+								</li>
+							{% endif %}
 							</ul>
-						</li>
-					</li>
-				</ul>
-			</div>
-		</div>
-</nav>
-</header>
+							</li>
+							</li>
+							</ul>
+				</div>
+			</nav>
+		</header>
 {% block content %}
-
 {% endblock %}
-
 {% block footer %}
-{% include 'footer/index.html.twig' %}
-{% endblock %}
+{% include 'footer/index.html.twig' %}{% endblock %}
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="{{ asset('assets/js/bootstrap.bundle.js') }}"></script>
 <script src="{{ asset('assets/js/reservation.js') }}"></script>
-
- </body>
- </html>
+</body>
+</html>
