--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -4,6 +4,20 @@
 {% endblock %}
 
 {% block content %}
+	<main class="main_container container-fluid">
+		<div class="container-fluid">
+			<div id="titleMenu" class="col col-lg-6 col-sm-12 col-md-7 flexCol">
+				<div>
+					<div>
+						<h1 class="headline" style="text-align: left;">Réservez une table</h1>
+					</div>
+					<a class="btn btn-primary" href="{{ path('app_reservation') }}" title="" role="button">
+						<span>Contactez-nous</span>
+					</a>
+				</div>
+			</div>
+		</div>
+	</main>
 	<div class="container mt-4">
 		<div class="row justify-content-center">
 			<div class="col-md-8">
