--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,19 +22,19 @@
 				<div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="{{ path('app_accueil') }}">Accueil</a>
+						<a class="nav-link" id="btnAccueil" aria-current="page" href="{{ path('app_accueil') }}">Accueil</a>
 						</li>
 						<li class="nav-item">
-						<a class="nav-link" href="{{path('app_menus')}}">Nos menus</a>
+						<a class="nav-link" id="btnMenus" href="{{path('app_menus')}}">Nos menus</a>
 						</li>
 						<li class="nav-item">
-						<a class="nav-link" href="{{path('app_restaurant_menu')}}">Notre carte</a>
+						<a class="nav-link" id="btnCard" href="{{path('app_restaurant_menu')}}">Notre carte</a>
 						</li>
 						<li class="nav-item">
-						<a class="nav-link" href="{{path('app_reservation')}}">Réserver une table</a>
+						<a class="nav-link" id="btnTable" href="{{path('app_reservation')}}">Réserver une table</a>
 						</li>
 						<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+						<a class="nav-link dropdown-toggle Members" id="btnMembers" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 							Membres
 							</a>
 						<ul class="dropdown-menu">
@@ -75,5 +75,6 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="{{ asset('assets/js/bootstrap.bundle.js') }}"></script>
 <script src="{{ asset('assets/js/reservation.js') }}"></script>
+<script src="{{ asset('assets/js/navBar.js') }}"></script>
 </body>
 </html>
