--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,68 +13,67 @@
 	</head>
 	<body>
 		<header>
-			<nav class="navbar navbar-expand-lg bg-body-tertiary">
+			<nav class="navbar navbar-expand-lg navbar-light fixed-top">
 				<div class="container-fluid">
 					<img class="navbar-brand logo_QA" src="{{ asset('assets/img/Logo_QA.png') }}"></img>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
-					</button>
+				</button>
 				<div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-						<a class="nav-link" id="btnAccueil" aria-current="page" href="{{ path('app_accueil') }}">Accueil</a>
+							<a class="nav-link" id="btnAccueil" aria-current="page" href="{{ path('app_accueil') }}">Accueil</a>
 						</li>
 						<li class="nav-item">
-						<a class="nav-link" id="btnMenus" href="{{path('app_menus')}}">Nos menus</a>
+							<a class="nav-link" id="btnMenus" href="{{path('app_menus')}}">Nos menus</a>
 						</li>
 						<li class="nav-item">
-						<a class="nav-link" id="btnCard" href="{{path('app_restaurant_menu')}}">Notre carte</a>
+							<a class="nav-link" id="btnCard" href="{{path('app_restaurant_menu')}}">Notre carte</a>
 						</li>
 						<li class="nav-item">
-						<a class="nav-link" id="btnTable" href="{{path('app_reservation')}}">Réserver une table</a>
+							<a class="nav-link" id="btnTable" href="{{path('app_reservation')}}">Réserver une table</a>
 						</li>
 						<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle Members" id="btnMembers" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							Membres
+							<a class="nav-link dropdown-toggle Members" id="btnMembers" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								Membres
 							</a>
-						<ul class="dropdown-menu">
-							{% if app.User %}
-								<li>
-									<a class="dropdown-item" href="{{ path('app_account') }}">Mon compte</a>
-								</li>
-								<li>
-									<a class="dropdown-item" href="">Points de fidélités</a>
-								</li>
-								{% if is_granted('ROLE_ADMIN') %}
+							<ul class="dropdown-menu">
+								{% if app.User %}
 									<li>
-										<a class="dropdown-item" href="{{ path('app_admin') }}">Administration</a>
+										<a class="dropdown-item" href="{{ path('app_account') }}">Mon compte</a>
+									</li>
+									<li>
+										<a class="dropdown-item" href="">Points de fidélités</a>
+									</li>
+									{% if is_granted('ROLE_ADMIN') %}
+										<li>
+											<a class="dropdown-item" href="{{ path('app_admin') }}">Administration</a>
+										</li>
+									{% endif %}
+									<li>
+										<a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a>
+									</li>
+								{% else %}
+									<li>
+										<a class="dropdown-item" href="{{ path('app_register') }}">Inscription</a>
+									</li>
+									<li>
+										<a class="dropdown-item" href="{{ path('app_login') }}">Connexion</a>
 									</li>
 								{% endif %}
-								<li>
-									<a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a>
-								</li>
-							{% else %}
-								<li>
-									<a class="dropdown-item" href="{{ path('app_register') }}">Inscription</a>
-								</li>
-								<li>
-									<a class="dropdown-item" href="{{ path('app_login') }}">Connexion</a>
-								</li>
-							{% endif %}
 							</ul>
-							</li>
-							</li>
-							</ul>
+						</li>
+					</li>
 				</div>
 			</nav>
 		</header>
-{% block content %}
-{% endblock %}
-{% block footer %}
-{% include 'footer/index.html.twig' %}{% endblock %}
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="{{ asset('assets/js/bootstrap.bundle.js') }}"></script>
-<script src="{{ asset('assets/js/reservation.js') }}"></script>
-<script src="{{ asset('assets/js/navBar.js') }}"></script>
-</body>
+		{% block content %}{% endblock %}
+		{% block footer %}
+			{% include 'footer/index.html.twig' %}
+		{% endblock %}
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<script src="{{ asset('assets/js/bootstrap.bundle.js') }}"></script>
+		<script src="{{ asset('assets/js/reservation.js') }}"></script>
+		<script src="{{ asset('assets/js/navBar.js') }}"></script>
+	</body>
 </html>
