--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,14 +4,16 @@
 {% endblock %}
 
 {% block content %}
+	<main class="main_container container-fluid">
+    <div class="container-fluid">
 	{% for flash_error in app.flashes('verify_email_error') %}
 		<div class="alert alert-danger" role="alert">{{ flash_error }}</div>
 	{% endfor %}
-	<div class="container mt-4">
+	<div class="container mt-4 mb-4">
 		<div class="row justify-content-center">
-			<div class="col-md-6">
-				<div class="card p-4">
-					<div class="card-header">
+			<div class="col-md-4">
+				<div class="card p-3 registerContainer">
+					<div class="">
 						<h3 class="text-center">Inscrivez-vous !</h3>
 					</div>
 					<div class="card-body">
@@ -27,10 +29,17 @@
 							{{ form_row(registrationForm.email) }}
 						</div>
 						<div class="form-group mb-3">
-							{{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
+							{{ form_row(registrationForm.password) }}
 						</div>
+
+						<div class="form-group mb-3">
+							{{ form_row(registrationForm.guestsNumber) }}
+						</div>
+
+						<div class="form-group mb-3">
+							{{ form_row(registrationForm.allergies) }}
+						</div>
+
 						<div class="form-group mb-3">
 							{{ form_row(registrationForm.agreeTerms) }}
 						</div>
@@ -43,4 +52,6 @@
 			</div>
 		</div>
 	</div>
+	</div>
+	</main>
 {% endblock %}
