--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -2,133 +2,102 @@
 
 {% block title %}Réservez une table !
 {% endblock %}
-
 {% block content %}
 	<main class="main_container container-fluid">
 		<div class="container-fluid">
-			<div id="titleMenu" class="col col-lg-6 col-sm-12 col-md-7 flexCol">
-				<div>
-					<div>
-						<h1 class="headline" style="text-align: left;">Réservez une table</h1>
+			<div class="container mt-4 mb-4">
+				<div class="row justify-content-center">
+					<div class="col-md-4">
+						<div class="card p-3 schudeleContainer">
+							<div class="">
+								<h3 class="text-center">Réservez une table !</h3>
+							</div>
+							<div class="card-body">
+								{{ form_start(form) }}
+								<div class="form-group mb-3">
+									{{ form_label(form.Firstname) }}
+									{{ form_widget(form.Firstname, {'attr': {'class': 'form-control'}}) }}
+									{{ form_errors(form.Firstname) }}
+								</div>
+								<div class="form-group mb-3">
+									{{ form_label(form.Lastname) }}
+									{{ form_widget(form.Lastname, {'attr': {'class': 'form-control'}}) }}
+									{{ form_errors(form.Lastname) }}
+								</div>
+								<div class="form-group mb-3">
+									{{ form_label(form.phone_number) }}
+									{{ form_widget(form.phone_number, {'attr': {'class': 'form-control'}}) }}
+									{{ form_errors(form.phone_number) }}
+								</div>
+								<div class="form-group mb-3">
+									{{ form_label(form.nombreCouverts) }}
+									{{ form_widget(form.nombreCouverts, {'attr': {'class': 'form-control'}}) }}
+									{{ form_errors(form.nombreCouverts) }}
+								</div>
+								<div class="form-group mb-3">
+									{{ form_label(form.date) }}
+									{{ form_widget(form.date, {'attr': {'class': 'form-control', 'value' : 'date'}}) }}
+									{{ form_errors(form.date) }}
+
+								</div>
+								<div class="form-group mb-3">
+									{{ form_label(form.heure) }}
+									{{ form_widget(form.heure, {'attr': {'class': 'form-control', 'value' : 'heure'}}) }}
+								</div>
+								<div class="form-group mb-3">
+									{{ form_label(form.allergie) }}
+									{{ form_widget(form.allergie, {'attr': {'class': 'form-control','style': 'resize:none;'}}) }}
+								</div>
+								<div class="form-group text-center">
+									<button type="submit" class="btn btn-primary px-4">Réserver</button>
+								</div>
+
+								{{ form_end(form) }}
+								<button class="btn btn-primary" id='check-availability' type='' value="availability">Vérifier</button>
+								<div id="availability"></div>
+							</div>
+						</div>
 					</div>
-					<a class="btn btn-primary" href="{{ path('app_reservation') }}" title="" role="button">
-						<span>Contactez-nous</span>
-					</a>
 				</div>
 			</div>
-		</div>
-	</main>
-	<div class="container mt-4">
-		<div class="row justify-content-center">
-			<div class="col-md-8">
-				<div class="card p-4">
-					<div class="card-header">
-						<h3 class="text-center">Réservation</h3>
-					</div>
-					<div class="card-body">
-						<h5>
-							<p>Le restaurant
-								<b>"Quai Antique"</b>
-							</p>
-						</h5>
-					</p>
-					<p>Place de la Victoire à Bordeaux, vous propose un service de réservation restaurant en ligne.</p>
-					<p>Réservez en quelques clics, confirmation dans les plus brefs délais.</p>
-					<p>Nous vous remercions d'avoir utilisé notre plateforme de réservation mise en place pour une meilleure gestion de notre établissement.</p>
-					<p>Vos messages sont tous lus par un être humain sympathique et efficace, je réponds dans les meilleurs délais, ne vous inquiétez pas.</p>
+			<div id="availability-message"></div>
+			<div id="calendar"></div>
+		</main>
+	{% endblock %}
+	{% block javascripts %}
+		{{ parent() }}
 
-					<p>Utilisez ce formulaire ou appelez-nous
-						<b>ici</b>
-					</p>
-					{{ form_start(form) }}
-					<div class="form-group mb-3">
-						{{ form_label(form.Firstname) }}
-						{{ form_widget(form.Firstname, {'attr': {'class': 'form-control'}}) }}
-						{{ form_errors(form.Firstname) }}
-					</div>
-					<div class="form-group mb-3">
-						{{ form_label(form.Lastname) }}
-						{{ form_widget(form.Lastname, {'attr': {'class': 'form-control'}}) }}
-						{{ form_errors(form.Lastname) }}
-					</div>
-					<div class="form-group mb-3">
-						{{ form_label(form.phone_number) }}
-						{{ form_widget(form.phone_number, {'attr': {'class': 'form-control'}}) }}
-						{{ form_errors(form.phone_number) }}
-					</div>
-					<div class="form-group mb-3">
-						{{ form_label(form.nombreCouverts) }}
-						{{ form_widget(form.nombreCouverts, {'attr': {'class': 'form-control'}}) }}
-						{{ form_errors(form.nombreCouverts) }}
-					</div>
-					<div class="form-group mb-3">
-						{{ form_label(form.date) }}
-						{{ form_widget(form.date, {'attr': {'class': 'form-control', 'value' : 'date'}}) }}
-						{{ form_errors(form.date) }}
+		<script>
+			$(document).ready(function () { // Initialiser le calendrier
+$('#calendar').fullCalendar({
+header: {
+left: 'prev,next today',
+center: 'title',
+right: 'month,agendaWeek,agendaDay'
+},
+selectable: true,
+select: function (start, end) { // Mettre à jour les champs date et heure avec les valeurs sélectionnées dans le calendrier
+$('#reservation_date').val(start.format('YYYY-MM-DD'));
+$('#reservation_heure').val(start.format('HH:mm'));
+}
+});
 
-					</div>
-					<div class="form-group mb-3">
-						{{ form_label(form.heure) }}
-						{{ form_widget(form.heure, {'attr': {'class': 'form-control', 'value' : 'heure'}}) }}
-					</div>
-					<div class="form-group mb-3">
-						{{ form_label(form.allergie) }}
-						{{ form_widget(form.allergie, {'attr': {'class': 'form-control','style': 'resize:none;'}}) }}
-					</div>
-					<div class="form-group text-center">
-						<button type="submit" class="btn btn-primary px-4">Réserver</button>
-					</div>
-
-					{{ form_end(form) }}
-					<button class="btn btn-primary" id='check-availability' type='' value="availability">Vérifier</button>
-					<div id="availability"></div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-    <div id="availability-message"></div>
-    <div id="calendar"></div>
-{% endblock %}
-{% block footer %}
-{% include 'footer/index.html.twig' %}
-{% endblock %}
-{% block javascripts %}
-    {{ parent() }}
-
-    <script>
-        $(document).ready(function() {
-            // Initialiser le calendrier
-            $('#calendar').fullCalendar({
-                header: {
-                    left: 'prev,next today',
-                    center: 'title',
-                    right: 'month,agendaWeek,agendaDay'
-                },
-                selectable: true,
-                select: function(start, end) {
-                    // Mettre à jour les champs date et heure avec les valeurs sélectionnées dans le calendrier
-                    $('#reservation_date').val(start.format('YYYY-MM-DD'));
-                    $('#reservation_heure').val(start.format('HH:mm'));
-                }
-            });
-
-            // Vérifier la disponibilité en temps réel lors de la soumission du formulaire
-            $('#check-availability-btn').click(function() {
-                $.ajax({
-                    url: '{{ path('reservation_check_availability') }}',
-                    type: 'POST',
-                    dataType: 'json',
-                    data: $('#reservation-form').serialize(),
-                    success: function(data) {
-                        if (data.available) {
-                            $('#availability-message').html('Une table est disponible à cette date et heure.');
-                        } else {
-                            $('#availability-message').html('Désolé, aucune table n\'est disponible à cette date et heure.');
-                        }
-                    }
-                });
-            });
-        });
-    </script>
-{% endblock %}
+// Vérifier la disponibilité en temps réel lors de la soumission du formulaire
+$('#check-availability-btn').click(function () {
+$.ajax({
+url: '{{ path('reservation_check_availability') }}',
+type: 'POST',
+dataType: 'json',
+data: $('#reservation-form').serialize(),
+success: function (data) {
+if (data.available) {
+$('#availability-message').html('Une table est disponible à cette date et heure.');
+} else {
+$('#availability-message').html('Désolé, aucune table n\'est disponible à cette date et heure.');
+}
+}
+});
+});
+});
+		</script>
+	{% endblock %}
