--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,43 +1,60 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Connectez-vous!
+{% endblock %}
 
 {% block content %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+	<main class="main_container container-fluid">
+		<div class="container-fluid">
+			<form method="post">
+				{% if error %}
+					<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+				{% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
+				{% if app.user %}
+					<div class="mb-3">
+						Vous êtes connecté en tant que
+						<b>{{ app.user.userIdentifier }}</b>.
+					</div>
+				{% endif %}
 
-            Vous êtes connecté en tant que <b>{{ app.user.userIdentifier }}</b>
-        </div>
-    {% endif %}
+				<div class="container mt-4">
+					<div class="row justify-content-center">
+						<div class="col-md-4 ">
+							<div class="card p-3 loginContainer">
+								<div class="">
+									<h3 class="text-center">Connectez-vous !</h3>
+								</div>
+								<div class="card-body">
+									<div class="form-group mb-3">
+										<label for="inputEmail">Email</label>
+										<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+									</div>
 
-    <h1 class="h3 mb-3 font-weight-normal">Se connecter</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Mot de Passe</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
-       Se connecter
-    </button>
-</form>
+									<div class="form-group mb-3">
+										<label for="inputPassword">Mot de Passe</label>
+										<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+									</div>
+									<div class="form-group mb-3">
+										<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+										<div class="checkbox mb-3">
+											<label>
+												<input type="checkbox" name="_remember_me">
+												Remember me
+											</label>
+										</div>
+										<div class="form-group mb-3 row justify-content-center">
+											<div class="col-12 col-md-6 d-flex justify-content-center">
+												<button class="btn btn-primary btn-block mx-auto" type="submit">Se connecter</button>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</form>
+		</div>
+	</main>
 {% endblock %}
